# Python-for-Data-developers-Part2

./: .gitignore  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
src/main/: main.py
src/main/entity/: entity.py
src/main/utils/: arguments_utils.py  cache_utils.py  date_utils.py  logging_utils.py  rss_utils.py
src/test/: test_main.py
src/test/entity/: test_entity.py
src/test/utils/: test_arguments_utils.py  test_date_utils.py  test_rss_utils.py
