[metadata]
name=final_proj
version=0.0.1
author=Oleh Tsariv
author_email=olegzariw@gmail.com
description = Package designed to fetch, parse, and display RSS feeds in a user-friendly format.
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.9

[pycodestyle]
max-line-length = 120

